--- a/[TNT_Creepy] Fortress-Combat-Items/.classpath
+++ b/[TNT_Creepy] Fortress-Combat-Items/.classpath
@@ -2,6 +2,10 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="lib" path="C:/Eclipse Spigot APIs/Spigot 1.8.7.jar"/>
+	<classpathentry kind="lib" path="C:/Eclipse Spigot APIs/Spigot 1.8.7.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="https://hub.spigotmc.org/javadocs/spigot/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
