--- a/[TNT_Creepy] Fortress-Combat-Items/.project
+++ b/[TNT_Creepy] Fortress-Combat-Items/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>[TNT_Creepy] Fortress-Combat-Items</name>
+	<name>FCItems</name>
 	<comment></comment>
 	<projects>
 	</projects>
