--- a/[TNT_Creepy] Fortress-Combat-Items/.classpath
+++ b/[TNT_Creepy] Fortress-Combat-Items/.classpath
@@ -7,5 +7,7 @@
 			<attribute name="javadoc_location" value="https://hub.spigotmc.org/javadocs/spigot/"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Eclipse Spigot APIs/FCI Dataprovider.jar"/>
+	<classpathentry kind="lib" path="C:/Eclipse Spigot APIs/EffectLib-4.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
