--- a/[TNT_Creepy] Fortress-Combat-Items/bin/plugin.yml
+++ b/[TNT_Creepy] Fortress-Combat-Items/bin/plugin.yml
@@ -1,7 +1,7 @@
 name: FCItems
 version: 1.0
 author: HappyHappyBoy & FilipZocktan
-
+depend: [FCIDataprovider]
 main: de.teamfci.main.main
 commands:
   getitem:
